--- a/package.json
+++ b/package.json
@@ -10,8 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/geolocation": "^3.4.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "axios": "^1.7.9",
     "react": "18.2.0",
-    "react-native": "0.73.11"
+    "react-native": "0.73.11",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-get-location": "^5.0.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-maps": "^1.20.1",
+    "react-native-reanimated": "^3.16.6",
+    "react-native-safe-area-context": "^4.14.1",
+    "react-native-screens": "^4.4.0",
+    "react-native-vector-icons": "^10.2.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
